ancient greek, greek and polish

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -1140,3 +1140,5 @@ Regarding syncretism, several patterns are attested crosslinguistically (ABC, AA
 Languages with morphological case containment show the cumulative case decomposition in their morphology. The phonological form of the accusative contains the form of the nominative plus an extra morpheme. The phonological form of the dative contains the form of the accusative plus an extra morpheme.
 
 For headless relatives, the idea is that a case wins the competition if it contains all features the other case has. As the dative is the richest in features (it contains \tsc{f1}, \tsc{f2} and \tsc{3}), it wins over the accusative (which consists of \tsc{f1} and \tsc{f2}) and the nominative (which contains only \tsc{f1}). Finally, the accusative wins over the nominative, because the former is richer in features than the latter.
+
+%formulized as: more complex case
