--- a/going-into-detail.tex
+++ b/going-into-detail.tex
@@ -113,7 +113,7 @@ then wh
 
 So we also have a plural there
 
-\begin{table}[H]\label{tbl:paradigmohg}
+\begin{table}[H]
  \center
  \caption {Relative pronouns in headless relatives in \ac{ohg}}
   \begin{tabular}{cccc}
