--- a/introduction.tex
+++ b/introduction.tex
@@ -105,8 +105,8 @@ Second, I write the relative clause in bold. When the relative pronoun takes the
 \section{The content of this dissertation}
 
 In the previous section I introduced the notion of case competition, and I illustrated how it appears in headless relatives. This dissertation discusses two question regarding this phenomenon.
-The first one is which case is going to win the case competition, i.e. which case surfaces. I discuss this in Part \ref{part:complexity}.
-The second question is whether both competitors are able to compete in the competition, i.e. whether one of the cases is surfacing or both are ungrammatical. I discuss this in Part \ref{part:direction}.
+The first one is which case is going to win the case competition, i.e. which case surfaces. I discuss this in Part \ref{part:case-facts}.
+The second question is whether both competitors are able to compete in the competition, i.e. whether one of the cases is surfacing or both are ungrammatical. I discuss this in Part \ref{part:variation}.
 For both I will show that morphology is leading. What we observe in syntax is a reflex of the morphology.
 
 % In Part \ref{part:complexity} I discuss the pattern observed in headless relatives in Gothic. This pattern has also been described for German, Greek, etc. etc. references references.
@@ -150,4 +150,14 @@ For both I will show that morphology is leading. What we observe in syntax is a 
 
 \subsection{Case attraction}
 
+Case attraction in headed relatives seems related, but I will not account for it.
+
+--give example of attraction, both directions--
+
+OHG has case attraction in headed relatives, Gothic does not, but both show case competition in headless relatives. So, there does not seem to be a one-to-one connection there. I leave it for further research.
+
 \subsection{Syncretism}
+
+For a long time it has been noted that syncretism seems to resolve case conflicts.
+
+A language like Polish, that normally doesn't allow for any case mismatches, even allows for it. In this dissertation I do not offer a detailed account for what a derivation looks like.
