--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -148,7 +148,6 @@ Examples in which the internal case is dative, the external case is accusative a
 \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} but \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg}\scsub{[dat?]} come.3\tsc{sg}\scsub{[acc?]} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg}
 and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
 `But he does not do that to him, the sad heart comes him, and he lives in God's rage!' \flushfill{\ac{ohg}, \ac{otfrid} II 3:37}\label{ex:ohg-acc-dat}
-mg
 
 To summarize
 
@@ -325,7 +324,15 @@ In sum, Modern German has two requirements for case competition in its headless 
 
 \section{No only external case wins}
 
-A third possibility logically exists. However, so the best of my knowledge, this pattern is not attested in any (past) natural language. It has been said about Greek, but I think this lanugage doesn't adhere to the case sacle. I give examples in the next section. It has also been said about Old Greek, and that could be the case, but I don't have the data. More research :)
+A third possibility logically exists. However, so the best of my knowledge, this pattern is not attested in any (past) natural language. It has been said about Greek, but I think this lanugage doesn't adhere to the case sacle. I give examples in the next section. It has also been said about Old Greek (but see ample examples here), but here is an example of why that's not the case:
+
+\tit{φιλέω}/\tit{philéō} `to love' takes accusative, \tit{ἀποθνῄσκω}/\tit{apothnḗiskō} `to die'
+
+\exg. ὃν οἱ θεοὶ φιλοῦσιν ἀποθνῄσκει νέος\\
+hòn hoi theoì philoũsin apothnḗͅskei néos\\
+\tsc{rel}.\ac{acc} the god.pl love.3rd.pl.pres.ind die.3rd.sg.pres.ind young\\
+`He whom the gods love dies young.' (Menander, The Double  Deceiver, fragment 125)
+
 
 It is of course impossible to prove the non-existence of anything, so it could be an accident, but I am going to set up an system in which this does not exist.
 
@@ -383,7 +390,7 @@ Jan likes\scsub{acc} who.\tsc{acc} teases\scsub{dat}\\
 Jan likes\scsub{acc} who.\tsc{dat} teases\scsub{dat}\\
 `Jan likes whoever he teases.'
 
-very small table, only acc and dat
+
 
 \subsection{External case surfaces}
 
@@ -392,35 +399,15 @@ very small table, only acc and dat
 
 Dasalaki: `no case competition'
 
-free relative pronoun takes main clause case
-
-first one without clitic
+`meet' takes accusative case, `give' takes genitive case. Going with the case competition would be: let the relative pronoun appear in genitive case. This is ungrammatical. Instead, the relative pronoun appear in the external case, and the internal case gets a clitic.
 
 \ex.
-\ag. Irϑan ópji káleses.\\
-came.3\tsc{pl}\scsub{nom} who.\tsc{nom.pl} invited.2\tsc{sg}\scsub{acc}\\
-`Whoever you invited came.' \hfill m:\tsc{nom}, e:\tsc{acc}, PL
-\bg. *Irϑan ópjus káleses.\\
-came.3\tsc{pl}\scsub{nom} who.\tsc{acc.pl} invited.2\tsc{sg}\scsub{acc}\\
-`Whoever you invited came.' \hfill m:\tsc{nom}, e:\tsc{acc}
-
-\ex.
-\ag. *Me efχarístisan ópjon íχa ósi leftá.\\
-\tsc{cl.1sg.acc} thanked.3\tsc{pl}\scsub{nom} who.\tsc{gen.pl} had.1\tsc{sg}\scsub{gen} given money\\
-`Whoever I had given money to thanked me.' \hfill m:\tsc{nom}, e:\tsc{gen}
-\bg. Me efχarístisan ópji tus íχa δósi leftá.\\
-\tsc{cl.1sg.acc} thanked.3\tsc{pl}\scsub{nom} who.\tsc{nom.pl} \tsc{cl.3pl.gen} had.1\tsc{sg}\scsub{gen} given money\\
-`Whoever I had given money to thanked me.' \hfill m:\tsc{nom}, e:\tsc{gen}
-
-second and third with clitic
-
-\ex.
-\ag. *Γnórisa ópju éδosan tin ipotrofia.\\
+\ag. *Γnórisa \tbf{ópju} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
 met.1\tsc{sg}\scsub{acc} who.\tsc{gen.sg} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
-`I met whoever they gave the scholarship to.' \hfill m:\tsc{acc}, e:\tsc{gen}
-\bg. Γnórisa ópjon tu éδosan tin ipotrofia.\\
+`I met whoever they gave the scholarship to.'
+\bg. Γnórisa ópjon \tbf{tu} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
 met.1\tsc{sg}\scsub{acc} who.\tsc{acc.sg} \tsc{cl.3sg.gen} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
-`I met whoever they gave the scholarship to.' \hfill m:\tsc{acc}, e:\tsc{gen}
+`I met whoever they gave the scholarship to.'
 
 
 
@@ -430,17 +417,14 @@ Harbert
 
 old english: matrix clause decides, going against case competition
 
-\tit{tōbrȳsan} `to pulversize' takes accusative objects, \tit{onuppan} `upon' takes dative objects.
+\tit{tōbrȳsan} `to pulversize' takes accusative objects, \tit{onuppan} `upon' takes dative objects. But we see that the relative pronoun appears in accusative case
 
 \exg. he tobryst ðone \tbf{ðe} \tbf{he} \tbf{onuppan} \tbf{fylð}\\
- it pulverizes\scsub{[acc]}  \tsc{rel}.\ac{acc} \tsc{compl} it upon\scsub{[dat]} falls\\
+ it pulverizes\scsub{[acc]} \tsc{rel}.\ac{acc} \tsc{compl} it upon\scsub{[dat]} falls\\
 `It pulverizes him whom it falls upon.' adapted from St.Mat. 1249 after xx
+
+%old english looks pretty similar to gothic here. Both have a complementizer, both have a relative pronoun preceding it. what I'll say later is that the old english complementizer also can also spell out case features and the gothic one cannot.
 
 \subsection{No internal case surfaces}
 
-o
-%
-% only internal case when it's dislocated
-% and done de bu nu hafst, nis and pron-acc compl you now have not-is se bin wer he your husband 'And him who you now have, he is not your husband.' Alc.P.V. 37
-% but then there is this additional element, so a different construction
-%
+What I have not seen is a language in which the relative pronoun appears in the internal case, and it does not care about the case hierarchy. So, the external case always needs to be taken into account.
