--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -6,25 +6,9 @@ As I have shown in the previous chapter, there are two types of languages with c
 (1) a language like Gothic or Old High German, in which the case competition always takes place
 (2) a language like Modern German, in which the case competition only takes place when the internal case can win. If not, there is no grammatical result
 
-Crucially, there exist no language in which case competition only takes place when the external case can win. This would be a language which is the opposite of Modern German.
+Crucially, there exist no language in which case competition only takes place when the external case can win. This would be a language which is the opposite of Modern German. How can we model such a difference between languages?
 
-Schematically this can be shown like this:
-
-\begin{table}[H]
- \center
- \caption {Variation in case competition languages}
-  \begin{tabular}{ccc}
-  \toprule
-        & \ac{int}>\ac{ext}  & \ac{ext}>\ac{int} \\
-        \cmidrule{2-3}
-  Gothic, \ac{ohg} & ✔          & ✔         \\
-  \ac{mg}  & ✔           & *         \\
-  n.a.     & *          & ✔         \\
-  \bottomrule
-  \end{tabular}
-\end{table}
-
-Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
+Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least Modern German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
 
 People have also been describing it like this: formulation from Cinque in his book. (which is actually wrong)
 
@@ -32,9 +16,7 @@ If it does not come from the input, where does it come from? I claim that it com
 
 A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages. Grosu 1994 linked richness of inflection to liberality. He actually talked about the richness of pro.
 
-
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
-
 
 In this chapter I show that there are different derivations for these languages:
 
@@ -45,8 +27,6 @@ Proposal of wh in a nutshell: the wh-relative is part of the relative clause. th
 Proposal of d in a nutshell: the analysis here is partly identical to the one for Modern German wh-relatives. d-relative is also part of the relative clause, and it can take the internal case, and it deletes the external head. Additionally, there can be a d, d-combination, and the relative pronoun is deleted under c-command under containment.
 
 From these two proposals follows that it is impossible to have third pattern, which is indeed also not attested. When the external case wins over the internal one, there is a situation in which the external case could delete the internal one. So, it is impossible to have the second option but not the first one.
-
-% Some intro about head of the relative clause and relative pronoun.
 
 % So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
