--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -526,3 +526,12 @@
   year={2005},
   publisher={MIT Press}
 }
+
+@incollection{kakarikos2014,
+  title={Case Attraction in Free Relative Clauses of Ancient Greek: A Study of the Syntax--Morphology Interface},
+  author={Kakarikos, Konstantinos},
+  booktitle={Major Trends in Theoretical and Applied Linguistics 1},
+  pages={289--304},
+  year={2014},
+  publisher={Sciendo Migration}
+}
