--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -6,6 +6,8 @@ In Part X of this dissertation, I discussed a first aspect of case competition i
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns}
 
+I showed that we can account for different facts having to do with the case hierarchy if we analyze the case hierarchy in terms of decomposed features. In line with that, I refer to cases more to the right on the case as more complex case than the cases more to the left on the case. They are less complex.
+
 However, there is a second aspect to headless relatives, which differs across languages. This has to do with whether case competition takes place in the first place. Languages differ in whether they allow the internal case or the external case to win the case competition. Logically speaking, there are three patterns possible for languages that show case competition.\footnote{
 In this stage, I do not discuss languages that do not allow internal or external case to win the case competition, because they do not show case competition. In Section X I come back to this kind of language.
 }
@@ -324,70 +326,47 @@ In sum, Modern German has two requirements for case competition in its headless 
 
 \section{No only external case wins}
 
-A third possibility logically exists. However, so the best of my knowledge, this pattern is not attested in any (past) natural language. It has been said about Greek, but I think this lanugage doesn't adhere to the case sacle. I give examples in the next section. It has also been said about Old Greek (but see ample examples here), but here is an example of why that's not the case:
+A third possibility logically exists. However, so the best of my knowledge, this pattern is not attested in any (past) natural language. It has been said about Greek, but I think this lanugage doesn't adhere to the case sacle. I give examples in the next section.
 
-\tit{φιλέω}/\tit{philéō} `to love' takes accusative, \tit{ἀποθνῄσκω}/\tit{apothnḗiskō} `to die'
+It has also been said about Old Greek (cf. in \citealt{cinque2005}) (see a lot of examples here \citealt{kakarikos2014}), but here is an example of why that's not the case:. Although they seem to be more rare, there are also example in which the internal case surfaces.
 
-\exg. ὃν οἱ θεοὶ φιλοῦσιν ἀποθνῄσκει νέος\\
-hòn hoi theoì philoũsin apothnḗͅskei néos\\
-\tsc{rel}.\ac{acc} the god.pl love.3rd.pl.pres.ind die.3rd.sg.pres.ind young\\
+Consider..
+\tit{philéō} `to love' takes accusative, \tit{apothnḗiskō} `to die'
+
+\exg. hòn hoi theoì philoũsin apothnḗͅskei néos\\
+\tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} the god.\tsc{pl} love.3\tsc{pl} die.3\tsc{sg} young\\
 `He whom the gods love dies young.' (Menander, The Double  Deceiver, fragment 125)
-
 
 It is of course impossible to prove the non-existence of anything, so it could be an accident, but I am going to set up an system in which this does not exist.
 
 
+
 \section{Patterns without case competition}
 
-Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
-
-
-% The nativeness of the headless relative constructions under
-% consideration, and in particular those represented by group (I), can be
-% established for the moment by citing instances in which they occur independently
-% of the Greek, e.g., in which the Gothic modified relative clause
-% reflects a Greek participial construction or a noun, or instances in which
-% they occur in opposition to the Greek. Evidence of the first type is
-% found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
-
-Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
-
+Not all languages adhere to this case hierarchy. Here is discuss a few: some that
 
 What does not exist: external only
-
-
-\begin{table}[H]
- \center
- \caption {Variation}
-  \begin{tabular}{ccc}
-  \toprule
-                      & \ac{ext}  & \ac{int} \\
-                      \cmidrule{2-3}
-  Polish              & *         & *        \\
-  Old English, Greek  & ✔         & *        \\
-  n.a.                & *         & ✔        \\
-  \bottomrule
-\end{tabular}\label{tbl:int-ext-summary}
-\end{table}
 
 \subsection{No mismatch allowed}
 
 pro-drop
 
+
+
 \ex.
-\ag. *Jan ufa kogokolkwiek wpu{\'s}cil do domu.\\
-Jan trusts\scsub{dat} who.\tsc{acc} let\scsub{acc} to home\\
+\ag. *Jan ufa kogokolkwiek wpuścil do domu.\\
+Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
 `Jan trusts whoever he let into the house.'
-\bg. *Jan ufa komukolkwiek wpu{\'s}cil do domu.\\
-Jan trusts\scsub{dat} who.\tsc{dat} let\scsub{acc} to home\\
+\bg. *Jan ufa komukolkwiek wpuścil do domu.\\
+Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
 `Jan trusts whoever he let into the house.'
 
 \ex.
 \ag. *Jan lubi kogokolkwiek dokucza.\\
-Jan likes\scsub{acc} who.\tsc{acc} teases\scsub{dat}\\
+Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
 `Jan likes whoever he teases.'
 \bg. *Jan lubi komukolkwiek dokucza.\\
-Jan likes\scsub{acc} who.\tsc{dat} teases\scsub{dat}\\
+Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
 `Jan likes whoever he teases.'
 
 
@@ -403,7 +382,7 @@ Dasalaki: `no case competition'
 
 \ex.
 \ag. *Γnórisa \tbf{ópju} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
-met.1\tsc{sg}\scsub{acc} who.\tsc{gen.sg} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
+met.1\tsc{sg}\scsub{acc} \tsc{rel}.\tsc{gen}.\tsc{sg}.\tsc{m} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
 `I met whoever they gave the scholarship to.'
 \bg. Γnórisa ópjon \tbf{tu} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
 met.1\tsc{sg}\scsub{acc} who.\tsc{acc.sg} \tsc{cl.3sg.gen} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
@@ -428,3 +407,9 @@ old english: matrix clause decides, going against case competition
 \subsection{No internal case surfaces}
 
 What I have not seen is a language in which the relative pronoun appears in the internal case, and it does not care about the case hierarchy. So, the external case always needs to be taken into account.
+
+\section{Summary}
+
+Case competition: two patterns. Gothic and Old High German allow both directions, Modern German only allows the internal case to surface. To the best of my knowledge, there are no languages in which only the external case can surface.
+
+There exist also languages without case competition. There we see some in which the relative pronoun takes the external case (Old English, Modern Greek) and some that don't allow for mismatches at all (Polish). To the best of my knowledge, there are no languages that do not care about the case hierarchy and take the internal case, leaving the external case for what it is.
