--- a/introduction.tex
+++ b/introduction.tex
@@ -109,42 +109,6 @@ The first one is which case is going to win the case competition, i.e. which cas
 The second question is whether both competitors are able to compete in the competition, i.e. whether one of the cases is surfacing or both are ungrammatical. I discuss this in Part \ref{part:variation}.
 For both I will show that morphology is leading. What we observe in syntax is a reflex of the morphology.
 
-% In Part \ref{part:complexity} I discuss the pattern observed in headless relatives in Gothic. This pattern has also been described for German, Greek, etc. etc. references references.
-% The pattern that arises in headless relatives is not restricted to headless relatives. It can also be observed in another syntactic phenomenon: the accessiblity hierarchy. This is..
-% Lastly: the pattern we observe in these two syntactic phenomena is what we know from morphology. I discuss patterns in morphology: formal containment, syncretism patterns, suppletion patterns.
-%
-% In Part \ref{part:complexity} I discuss an aspect of headless relatives that differs per language. That is, not all languages act like Gothic.
-%
-% \ex. Modern German
-% \ag. accusative dative\\
-%  \\
-%  `'
-% \bg. dative accusative\\
-%  \\
-%  `'
-%
-%  \ex. Old High German
-%  \ag. accusative dative\\
-%   \\
-%   `'
-%  \bg. dative accusative\\
-%   \\
-%   `'
-%
-%   \ex. Italian
-%   \ag. accusative dative\\
-%    \\
-%    `'
-%   \bg. dative accusative\\
-%    \\
-%    `'
-%
-% So far people said..
-% I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
-%
-% In Part \ref{part:details} I show how all of this can be derived in derivations.
-
-
 
 \section{The scope of this dissertation}
 
@@ -161,3 +125,37 @@ OHG has case attraction in headed relatives, Gothic does not, but both show case
 For a long time it has been noted that syncretism seems to resolve case conflicts.
 
 A language like Polish, that normally doesn't allow for any case mismatches, even allows for it. In this dissertation I do not offer a detailed account for what a derivation looks like.
+
+\exg. Jan unika kogokolwiek wczoraj obraził.\\
+Jan avoid.\tsc{3sg}\scsub{[gen]} \tsc{rel}.\tsc{acc/gen}.\ac{sg}.\ac{m} yesterday offend.\tsc{3sg}.\tsc{past}\scsub{[acc]}.\\
+`Jan avoided whoever he offended yesterday.'
+
+\subsection{The genitive}\label{sec:genitive}
+
+In Gothic headless relatives, there is data available of the genitive in case competition with the accusative. The genitive wins in this competition.
+I give an example in which the internal case is accusative and the external case is genitive in \ref{ex:gothic-gen-acc}.
+The relative clause is marked in bold, the relative pronoun is not.
+The internal case is accusative. The predicate \tit{gasehvun} `saw' takes accusative objects.
+The external case is genitive. The noun \tit{waiht} `thing' combines with a genitive.
+The relative pronoun \tit{þiz(e)} `what.\ac{gen}' appears in the external case: the genitive.
+
+\exg. ni waiht þiz \tbf{-ei} \tbf{gasehvun}\\
+ not thing\scsub{[gen]} what.\ac{gen} -\ac{comp} saw\scsub{[acc]}\\
+ `not any of (that) which they saw' \flushfill{Gothic, \ac{luke} 9:36, adapted from \pgcitealt{harbert1978}{340}}\label{ex:gothic-gen-acc}
+
+If the internal case is genitive and the external case is accusative, the genitive wins as well. Crucially, there are no attested examples in Gothic of genitives in case competition with nominatives or datives.
+
+The same holds for the two other main languages discussed in this thesis: Modern German and Old High German.
+In Modern German, case competitions have been reported between all possible case combinations, so also between genitives and nominatives, between genitives and accusatives, and between genitives and datives \citep[cf.][]{vogel2001}. The genitive wins over the nominative and the accusative. In a competition between the genitive and the dative neither of them gives a grammatical result.
+Old High German might show some examples of case competition between genitives and accusatives and genitives and nominative. In these cases, the genitive always wins. No examples of datives against genitives are attested \citep{behaghel1923}.
+In sum, the genitive does not appear in all possible case competition combinations in all three languages, and is therefore excluded.
+
+What do I predict for the genitive? Starke: S-acc --- S-dat --- gen --- B-acc --- B-dat
+
+hierarchies for each language individually. Gothic syncretisms: acc-dat, acc-nom, nom-gen(!). Modern German: nom-acc-dat-gen? Old High German: ?
+
+then the predictions would be..
+
+The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
+
+I leave it for future research..
